BJS2-85425: Турнир трех волшебников: initial version